--- a/docs/docs-ref-autogen/excel_online/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.range.yml
@@ -158,7 +158,7 @@ items:
 
       有关详细信息，请参阅[使用自动填充和快速填充](https://support.office.com/article/video-use-autofill-and-flash-fill-2e79a709-c814-4b27-8bc2-c4dc84d49464)<!-- -->.
 
-      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` <!-- --> ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'autoFill(destinationRange, autoFillType)'
     fullName: 'autoFill(destinationRange, autoFillType)'
     langs:
@@ -201,7 +201,7 @@ items:
 
       有关详细信息，请参阅[使用自动填充和快速填充](https://support.office.com/article/video-use-autofill-and-flash-fill-2e79a709-c814-4b27-8bc2-c4dc84d49464)<!-- -->.
 
-      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9、ExcelApi Preview for null `destinationRange` <!-- --> ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'autoFill(destinationRange, autoFillTypeString)'
     fullName: 'autoFill(destinationRange, autoFillTypeString)'
     langs:
@@ -1034,7 +1034,7 @@ items:
             - number
   - uid: 'excel!Excel.Range#getEntireColumn:member(1)'
     summary: |-
-      获取一个对象，该对象代表区域的整列（例如，如果当前区域表示单元格 "B4： E11"，则它`getEntireColumn`是表示列 "B:E" 的区域）。
+      获取一个对象，该对象代表区域的整列（例如，如果当前区域表示单元格 "B4： E11"，则它 `getEntireColumn` 是表示列 "B:E" 的区域）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getEntireColumn()
@@ -1073,7 +1073,7 @@ items:
           ```
   - uid: 'excel!Excel.Range#getEntireRow:member(1)'
     summary: |-
-      获取一个对象，该对象表示区域的整行（例如，如果当前区域表示单元格 "B4： E11"，则它`GetEntireRow`是表示行 "4:11" 的区域）。
+      获取一个对象，该对象表示区域的整行（例如，如果当前区域表示单元格 "B4： E11"，则它 `GetEntireRow` 是表示行 "4:11" 的区域）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getEntireRow()
@@ -1115,7 +1115,7 @@ items:
     summary: |-
       将区域呈现为 base64 编码的 png 图像。
 
-      **重要说明**： Excel for Mac 中目前不支持此 API。 访问\[OfficeDev/office-js 问题\#235\]（https://github.com/OfficeDev/office-js/issues/235)适用于当前状态。
+      **重要说明**： Excel for Mac 中目前不支持此 API。 访问 \[ OfficeDev/office-Js 问题 \# 235 \] （ https://github.com/OfficeDev/office-js/issues/235) 适用于当前状态。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getImage()
@@ -1908,7 +1908,7 @@ items:
           ```
       parameters:
         - id: groupOption
-          description: 指定如何按行或列对区域进行分组。 当`InvalidArgument`组选项与范围`isEntireRow`或`isEntireColumn`属性不同时（即， `range.isEntireRow`为 true 且`groupOption`为 "ByColumns"，或者`range.isEntireColumn` `groupOption`为 "ByRows"）时，将引发错误。
+          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围 `isEntireRow` 或 `isEntireColumn` 属性不同时（即，为 `range.isEntireRow` True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows"）时，将引发错误。
           type:
             - 'excel!Excel.GroupOption:enum'
   - uid: 'excel!Excel.Range#group:member(2)'
@@ -1929,7 +1929,7 @@ items:
         description: ''
       parameters:
         - id: groupOptionString
-          description: 指定如何按行或列对区域进行分组。 当`InvalidArgument`组选项与范围`isEntireRow`或`isEntireColumn`属性不同时（即， `range.isEntireRow`为 true 且`groupOption`为 "ByColumns"，或者`range.isEntireColumn` `groupOption`为 "ByRows"）时，将引发错误。
+          description: 指定如何按行或列对区域进行分组。 `InvalidArgument`当组选项与范围 `isEntireRow` 或 `isEntireColumn` 属性不同时（即，为 `range.isEntireRow` True 且 `groupOption` 为 "ByColumns"，或者为 `range.isEntireColumn` `groupOption` "ByRows"）时，将引发错误。
           type:
             - '"ByRows" | "ByColumns"'
   - uid: 'excel!Excel.Range#height:member'
@@ -2173,7 +2173,7 @@ items:
         type:
           - 'excel!Excel.Range#linkedDataTypeState~0:complex'
   - uid: 'excel!Excel.Range#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -2191,7 +2191,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.RangeLoadOptions:interface'
   - uid: 'excel!Excel.Range#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -2231,7 +2231,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Range#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -2249,7 +2249,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -2377,7 +2377,7 @@ items:
           ```
   - uid: 'excel!Excel.Range#numberFormatLocal:member'
     summary: |-
-      根据用户的语言设置，表示给定范围的 Excel 数字格式代码。 在获取或设置`numberFormatLocal`属性时，Excel 不会执行任何语言或格式强制。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
+      根据用户的语言设置，表示给定范围的 Excel 数字格式代码。 在获取或设置属性时，Excel 不会执行任何语言或格式强制 `numberFormatLocal` 。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
@@ -2924,7 +2924,7 @@ items:
           ```
   - uid: 'excel!Excel.Range#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
+      指定区域的文本值。 文本值与单元格宽度无关。 \#EXCEL UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -2938,7 +2938,7 @@ items:
         type:
           - 'string[][]'
   - uid: 'excel!Excel.Range#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel Range 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.RangeData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Excel Range 对象是 API 对象，但 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.RangeData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -2966,7 +2966,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.Range#track:member(1)'
-    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是的简写`context.trackedObjects.add(thisObject)`<!-- -->. 如果要在多`.sync`个调用中使用此对象，并在 "运行" 批处理的顺序执行之外使用此对象，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将该对象添加到跟踪的对象集合中。
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是的简写`context.trackedObjects.add(thisObject)`<!-- -->. 如果要在多个调用中使用此对象 `.sync` ，并在 "运行" 批处理的顺序执行之外使用此对象，并在设置属性或对对象调用方法时获取 "InvalidObjectPath" 错误，则需要在首次创建对象时将该对象添加到跟踪的对象集合中。
     name: track()
     fullName: track()
     langs:
@@ -3073,7 +3073,7 @@ items:
           });
           ```
   - uid: 'excel!Excel.Range#untrack:member(1)'
-    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是的简写`context.trackedObjects.remove(thisObject)`<!-- -->. 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前`context.sync()` ，您需要调用该过程。
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是的简写`context.trackedObjects.remove(thisObject)`<!-- -->. 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在 `context.sync()` 内存释放生效之前，您需要调用该过程。
     name: untrack()
     fullName: untrack()
     langs:
