--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartfill.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartfill.yml
@@ -101,7 +101,7 @@ items:
           ```
       parameters:
         - id: color
-          description: '代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。'
+          description: 代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
           type:
             - string
   - uid: 'excel!Excel.ChartFill#toJSON:member(1)'
