--- a/docs/docs-ref-autogen/word_1_3/word/word.documentproperties.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.documentproperties.yml
@@ -234,7 +234,7 @@ items:
         type:
           - '!Date:interface'
   - uid: 'word!Word.DocumentProperties#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -252,7 +252,7 @@ items:
           type:
             - 'word!Word.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'word!Word.DocumentProperties#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -270,7 +270,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.DocumentProperties#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
