--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapeautosize.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapeautosize.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeAutoSize:enum'
     summary: |-
-      <span data-ttu-id="1d0f2-101">确定允许的自动调整大小的类型。</span><span class="sxs-lookup"><span data-stu-id="1d0f2-101">Determines the type of automatic sizing allowed.</span></span>
+      确定允许的自动调整大小的类型。
 
-      <span data-ttu-id="1d0f2-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1d0f2-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeAutoSize
     fullName: Excel.ShapeAutoSize
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.ShapeAutoSize.autoSizeShapeToFitText:member'
       - 'excel!Excel.ShapeAutoSize.autoSizeTextToFitShape:member'
   - uid: 'excel!Excel.ShapeAutoSize.autoSizeMixed:member'
-    summary: <span data-ttu-id="1d0f2-103">使用自动调整大小方案的组合。</span><span class="sxs-lookup"><span data-stu-id="1d0f2-103">A combination of automatic sizing schemes are used.</span></span>
+    summary: 使用自动调整大小方案的组合。
     name: autoSizeMixed
     fullName: autoSizeMixed
     langs:
@@ -25,7 +25,7 @@ items:
     type: field
     numericValue: '"AutoSizeMixed"'
   - uid: 'excel!Excel.ShapeAutoSize.autoSizeNone:member'
-    summary: <span data-ttu-id="1d0f2-104">不自动调整大小。</span><span class="sxs-lookup"><span data-stu-id="1d0f2-104">No autosizing.</span></span>
+    summary: 不自动调整大小。
     name: autoSizeNone
     fullName: autoSizeNone
     langs:
@@ -33,7 +33,7 @@ items:
     type: field
     numericValue: '"AutoSizeNone"'
   - uid: 'excel!Excel.ShapeAutoSize.autoSizeShapeToFitText:member'
-    summary: <span data-ttu-id="1d0f2-105">根据文本调整形状。</span><span class="sxs-lookup"><span data-stu-id="1d0f2-105">The shape is adjusted to fit the text.</span></span>
+    summary: 根据文本调整形状。
     name: autoSizeShapeToFitText
     fullName: autoSizeShapeToFitText
     langs:
@@ -41,7 +41,7 @@ items:
     type: field
     numericValue: '"AutoSizeShapeToFitText"'
   - uid: 'excel!Excel.ShapeAutoSize.autoSizeTextToFitShape:member'
-    summary: <span data-ttu-id="1d0f2-106">根据形状调整文本。</span><span class="sxs-lookup"><span data-stu-id="1d0f2-106">The text is adjusted to fit the shape.</span></span>
+    summary: 根据形状调整文本。
     name: autoSizeTextToFitShape
     fullName: autoSizeTextToFitShape
     langs:
