--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.collectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.collectionloadoptions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.Interfaces.CollectionLoadOptions:interface'
-    summary: <span data-ttu-id="d35e8-101">提供仅加载集合成员的一个子集的属性的方法。</span><span class="sxs-lookup"><span data-stu-id="d35e8-101">Provides ways to load properties of only a subset of members of a collection.</span></span>
+    summary: 提供仅加载集合成员的一个子集的属性的方法。
     name: Word.Interfaces.CollectionLoadOptions
     fullName: Word.Interfaces.CollectionLoadOptions
     langs:
@@ -12,7 +12,7 @@ items:
       - 'word!Word.Interfaces.CollectionLoadOptions#$skip:member'
       - 'word!Word.Interfaces.CollectionLoadOptions#$top:member'
   - uid: 'word!Word.Interfaces.CollectionLoadOptions#$skip:member'
-    summary: '<span data-ttu-id="d35e8-102">指定要跳过且不包含在结果中的集合中的项数目。</span><span class="sxs-lookup"><span data-stu-id="d35e8-102">Specify the number of items in the collection that are to be skipped and not included in the result.</span></span> <span data-ttu-id="d35e8-103">如果指定 top，跳过指定数目的项目后将开始选择结果。</span><span class="sxs-lookup"><span data-stu-id="d35e8-103">If top is specified, the selection of result will start after skipping the specified number of items.</span></span>'
+    summary: 指定要跳过且不包含在结果中的集合中的项数目。 如果指定 top，跳过指定数目的项目后将开始选择结果。
     name: $skip
     fullName: $skip
     langs:
@@ -24,7 +24,7 @@ items:
         type:
           - number
   - uid: 'word!Word.Interfaces.CollectionLoadOptions#$top:member'
-    summary: <span data-ttu-id="d35e8-104">指定要包括在结果中的查询集合中的项数目。</span><span class="sxs-lookup"><span data-stu-id="d35e8-104">Specify the number of items in the queried collection to be included in the result.</span></span>
+    summary: 指定要包括在结果中的查询集合中的项数目。
     name: $top
     fullName: $top
     langs:
