--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartpointformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartpointformatloadoptions.yml
@@ -14,7 +14,7 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
