--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemloadoptions.yml
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.PivotItemLoadOptions#name:member'
       - 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
