--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeupdatedata.yml
@@ -143,7 +143,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeUpdateData#numberFormatLocal:member'
     summary: |-
-      根据用户的语言设置，表示给定范围的 Excel 数字格式代码。 在获取或设置`numberFormatLocal`属性时，Excel 不会执行任何语言或格式强制。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
+      根据用户的语言设置，表示给定范围的 Excel 数字格式代码。 在获取或设置属性时，Excel 不会执行任何语言或格式强制 `numberFormatLocal` 。 任何返回的文本将根据系统设置中指定的语言使用本地格式化的字符串。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormatLocal
