--- a/docs/docs-ref-autogen/word_1_1/word/word.requestcontext.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.requestcontext.yml
@@ -14,7 +14,7 @@ items:
       - 'word!Word.RequestContext:constructor(1)'
       - 'word!Word.RequestContext#document:member'
   - uid: 'word!Word.RequestContext:constructor(1)'
-    summary: 构造`RequestContext`类的新实例
+    summary: 构造类的新实例 `RequestContext`
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
