commit bilingual contents

--- a/docs/docs-ref-autogen/excel/custom-functions-runtime/customfunctions.streaminginvocation.yml
+++ b/docs/docs-ref-autogen/excel/custom-functions-runtime/customfunctions.streaminginvocation.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'custom-functions-runtime!CustomFunctions.StreamingInvocation:interface'
     summary: |-
-      <span data-ttu-id="81783-101">提供有关调用流式处理自定义函数的信息。</span><span class="sxs-lookup"><span data-stu-id="81783-101">Provides information about the invocation of a streaming custom function.</span></span> <span data-ttu-id="81783-102">流式处理自定义函数可提供可以随时间变化的结果。</span><span class="sxs-lookup"><span data-stu-id="81783-102">A streaming custom function can provide results which can change over time.</span></span>
+      提供有关调用流式处理自定义函数的信息。 流式处理自定义函数可提供可以随时间变化的结果。
 
-      <span data-ttu-id="81783-103">调用`setResult()`一次或多次以提供结果，而不是从函数返回结果。</span><span class="sxs-lookup"><span data-stu-id="81783-103">Call `setResult()` one or more times to provide the result instead of returning a result from the function.</span></span>
+      调用 `setResult()` 一次或多次以提供结果，而不是从函数返回结果。
     name: CustomFunctions.StreamingInvocation
     fullName: CustomFunctions.StreamingInvocation
     langs:
@@ -19,7 +19,7 @@ items:
     children:
       - 'custom-functions-runtime!CustomFunctions.StreamingInvocation#setResult:member'
   - uid: 'custom-functions-runtime!CustomFunctions.StreamingInvocation#setResult:member'
-    summary: <span data-ttu-id="81783-104">设置自定义函数的结果。</span><span class="sxs-lookup"><span data-stu-id="81783-104">Set the result for the custom function.</span></span> <span data-ttu-id="81783-105">可以多次调用。</span><span class="sxs-lookup"><span data-stu-id="81783-105">May be called more than once.</span></span>
+    summary: 设置自定义函数的结果。 可以多次调用。
     name: setResult
     fullName: setResult
     langs:
