--- a/docs/docs-ref-autogen/word_1_2/word/word.eventtype.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.eventtype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.EventType:enum'
     summary: |-
-      <span data-ttu-id="42807-101">提供有关引发事件的类型的信息。</span><span class="sxs-lookup"><span data-stu-id="42807-101">Provides information about the type of a raised event.</span></span> <span data-ttu-id="42807-102">对于每个对象类型，请保留以下顺序：已删除，选择已更改，数据已更改，已添加。</span><span class="sxs-lookup"><span data-stu-id="42807-102">For each object type, please keep the order of: deleted, selection changed, data changed, added.</span></span>
+      提供有关引发事件的类型的信息。 对于每个对象类型，请保留以下顺序：已删除，选择已更改，数据已更改，已添加。
 
-      <span data-ttu-id="42807-103">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="42807-103">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.EventType
     fullName: Word.EventType
     langs:
@@ -20,7 +20,7 @@ items:
       - 'word!Word.EventType.contentControlDeleted:member'
       - 'word!Word.EventType.contentControlSelectionChanged:member'
   - uid: 'word!Word.EventType.annotationAdded:member'
-    summary: <span data-ttu-id="42807-104">AnnotationAdded 表示批注已添加到文档中的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-104">AnnotationAdded represents the event an annotation has been added to the document.</span></span>
+    summary: AnnotationAdded 表示批注已添加到文档中的事件。
     name: annotationAdded
     fullName: annotationAdded
     langs:
@@ -28,7 +28,7 @@ items:
     type: field
     numericValue: '"AnnotationAdded"'
   - uid: 'word!Word.EventType.annotationChanged:member'
-    summary: <span data-ttu-id="42807-105">AnnotationAdded 表示已在文档中更新批注的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-105">AnnotationAdded represents the event an annotation has been updated in the document.</span></span>
+    summary: AnnotationAdded 表示已在文档中更新批注的事件。
     name: annotationChanged
     fullName: annotationChanged
     langs:
@@ -36,7 +36,7 @@ items:
     type: field
     numericValue: '"AnnotationChanged"'
   - uid: 'word!Word.EventType.annotationDeleted:member'
-    summary: <span data-ttu-id="42807-106">AnnotationAdded 表示批注已从文档中删除的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-106">AnnotationAdded represents the event an annotation has been deleted from the document.</span></span>
+    summary: AnnotationAdded 表示批注已从文档中删除的事件。
     name: annotationDeleted
     fullName: annotationDeleted
     langs:
@@ -44,7 +44,7 @@ items:
     type: field
     numericValue: '"AnnotationDeleted"'
   - uid: 'word!Word.EventType.contentControlAdded:member'
-    summary: <span data-ttu-id="42807-107">ContentControlAdded 表示内容控件已添加到文档中的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-107">ContentControlAdded represents the event a content control has been added to the document.</span></span>
+    summary: ContentControlAdded 表示内容控件已添加到文档中的事件。
     name: contentControlAdded
     fullName: contentControlAdded
     langs:
@@ -52,7 +52,7 @@ items:
     type: field
     numericValue: '"ContentControlAdded"'
   - uid: 'word!Word.EventType.contentControlDataChanged:member'
-    summary: <span data-ttu-id="42807-108">ContentControlDataChanged 表示内容控件中的数据已更改的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-108">ContentControlDataChanged represents the event that the data in the content control have been changed.</span></span>
+    summary: ContentControlDataChanged 表示内容控件中的数据已更改的事件。
     name: contentControlDataChanged
     fullName: contentControlDataChanged
     langs:
@@ -60,7 +60,7 @@ items:
     type: field
     numericValue: '"ContentControlDataChanged"'
   - uid: 'word!Word.EventType.contentControlDeleted:member'
-    summary: <span data-ttu-id="42807-109">ContentControlDeleted 表示内容控件已被删除的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-109">ContentControlDeleted represent the event that the content control has been deleted.</span></span>
+    summary: ContentControlDeleted 表示内容控件已被删除的事件。
     name: contentControlDeleted
     fullName: contentControlDeleted
     langs:
@@ -68,7 +68,7 @@ items:
     type: field
     numericValue: '"ContentControlDeleted"'
   - uid: 'word!Word.EventType.contentControlSelectionChanged:member'
-    summary: <span data-ttu-id="42807-110">ContentControlSelectionChanged 表示内容控件中的所选内容已更改的事件。</span><span class="sxs-lookup"><span data-stu-id="42807-110">ContentControlSelectionChanged represents the event that the selection in the content control has been changed.</span></span>
+    summary: ContentControlSelectionChanged 表示内容控件中的所选内容已更改的事件。
     name: contentControlSelectionChanged
     fullName: contentControlSelectionChanged
     langs:
