--- a/docs/docs-ref-autogen/excel/custom-functions-runtime.yml
+++ b/docs/docs-ref-autogen/excel/custom-functions-runtime.yml
@@ -13,7 +13,7 @@ items:
       - 'custom-functions-runtime!CustomFunctions.Invocation:interface'
       - 'custom-functions-runtime!CustomFunctions.StreamingInvocation:interface'
   - uid: 'custom-functions-runtime!CustomFunctions.associate:function(1)'
-    summary: <span data-ttu-id="9b3cc-101">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性所指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="9b3cc-101">Associates the JavaScript function to the name given by the "id" property in the metadata JSON file.</span></span>
+    summary: 将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性所指定的名称相关联。
     name: 'CustomFunctions.associate(id, functionObject)'
     fullName: 'CustomFunctions.associate(id, functionObject)'
     langs:
@@ -35,7 +35,7 @@ items:
           type:
             - '!Function:interface'
   - uid: 'custom-functions-runtime!CustomFunctions.associate:function(2)'
-    summary: <span data-ttu-id="9b3cc-102">将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性指定的名称相关联。</span><span class="sxs-lookup"><span data-stu-id="9b3cc-102">Associates the JavaScript functions to the names given by the "id" properties in the metadata JSON file.</span></span>
+    summary: 将 JavaScript 函数与元数据 JSON 文件中的 "id" 属性指定的名称相关联。
     name: CustomFunctions.associate(mappings)
     fullName: CustomFunctions.associate(mappings)
     langs:
