--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartpointformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartpointformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="5d62a-101">表示图表点的格式化对象。</span><span class="sxs-lookup"><span data-stu-id="5d62a-101">Represents formatting object for chart points.</span></span>
+      表示图表点的格式化对象。
 
-      <span data-ttu-id="5d62a-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5d62a-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPointFormatLoadOptions
     fullName: Excel.Interfaces.ChartPointFormatLoadOptions
     langs:
@@ -14,7 +14,7 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
   - uid: 'excel!Excel.Interfaces.ChartPointFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="5d62a-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="5d62a-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="5d62a-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="5d62a-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="5d62a-105">).</span><span class="sxs-lookup"><span data-stu-id="5d62a-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
