--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotfielddata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotfielddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
-    summary: <span data-ttu-id="12914-101">描述通过调用返回的数据的接口`pivotField.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="12914-101">An interface describing the data returned by calling `pivotField.toJSON()`</span></span><!-- --><span data-ttu-id="12914-102">.</span><span class="sxs-lookup"><span data-stu-id="12914-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`pivotField.toJSON()`<!-- -->.
     name: Excel.Interfaces.PivotFieldData
     fullName: Excel.Interfaces.PivotFieldData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.PivotFieldData#subtotals:member'
   - uid: 'excel!Excel.Interfaces.PivotFieldData#id:member'
     summary: |-
-      <span data-ttu-id="12914-103">PivotField 的 ID。</span><span class="sxs-lookup"><span data-stu-id="12914-103">Id of the PivotField.</span></span>
+      PivotField 的 ID。
 
-      <span data-ttu-id="12914-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12914-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotFieldData#items:member'
     summary: |-
-      <span data-ttu-id="12914-105">返回与 PivotField 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="12914-105">Returns the PivotFields associated with the PivotField.</span></span>
+      返回与 PivotField 相关联的 PivotFields。
 
-      <span data-ttu-id="12914-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12914-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: items
     fullName: items
     langs:
@@ -46,9 +46,9 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldData#items~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotFieldData#name:member'
     summary: |-
-      <span data-ttu-id="12914-107">PivotField 的名称。</span><span class="sxs-lookup"><span data-stu-id="12914-107">Name of the PivotField.</span></span>
+      PivotField 的名称。
 
-      <span data-ttu-id="12914-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12914-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -61,9 +61,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotFieldData#showAllItems:member'
     summary: |-
-      <span data-ttu-id="12914-109">确定是否显示 PivotField 的所有项。</span><span class="sxs-lookup"><span data-stu-id="12914-109">Determines whether to show all items of the PivotField.</span></span>
+      确定是否显示 PivotField 的所有项。
 
-      <span data-ttu-id="12914-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12914-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllItems
     fullName: showAllItems
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotFieldData#subtotals:member'
     summary: |-
-      <span data-ttu-id="12914-111">PivotField 小计。</span><span class="sxs-lookup"><span data-stu-id="12914-111">Subtotals of the PivotField.</span></span>
+      PivotField 小计。
 
-      <span data-ttu-id="12914-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12914-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subtotals
     fullName: subtotals
     langs:
