--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablerowupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablerowupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableRowUpdateData:interface'
-    summary: '<span data-ttu-id="ae93f-101">一个用于更新 TableRow 对象上的数据的接口，可用于`tableRow.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="ae93f-101">An interface for updating data on the TableRow object, for use in `tableRow.set({ ... })`</span></span><!-- --><span data-ttu-id="ae93f-102">.</span><span class="sxs-lookup"><span data-stu-id="ae93f-102"></span></span>'
+    summary: '一个用于更新 TableRow 对象上的数据的接口，可用于`tableRow.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TableRowUpdateData
     fullName: Excel.Interfaces.TableRowUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.TableRowUpdateData#values:member'
   - uid: 'excel!Excel.Interfaces.TableRowUpdateData#values:member'
     summary: |-
-      <span data-ttu-id="ae93f-103">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="ae93f-103">Represents the raw values of the specified range.</span></span> <span data-ttu-id="ae93f-104">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="ae93f-104">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="ae93f-105">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="ae93f-105">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="ae93f-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ae93f-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
