--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rowpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rowpropertiesloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.RowPropertiesLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d3532-101">表示在用作 "getRowProperties" 方法的一部分时要加载的行属性。</span><span class="sxs-lookup"><span data-stu-id="d3532-101">Represents which row properties to load, when used as part of a "range.getRowProperties" method.</span></span>
+      表示在用作 "getRowProperties" 方法的一部分时要加载的行属性。
 
-      <span data-ttu-id="d3532-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3532-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RowPropertiesLoadOptions
     fullName: Excel.RowPropertiesLoadOptions
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.RowPropertiesLoadOptions#rowIndex:member'
   - uid: 'excel!Excel.RowPropertiesLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="d3532-103">指定是否在`format`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="d3532-103">Specifies whether to load on the `format` property.</span></span>
+      指定是否在属性上进行加载 `format` 。
 
-      <span data-ttu-id="d3532-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3532-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RowPropertiesLoadOptions#format~0:complex'
   - uid: 'excel!Excel.RowPropertiesLoadOptions#rowHidden:member'
     summary: |-
-      <span data-ttu-id="d3532-105">指定是否在`rowHidden`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="d3532-105">Specifies whether to load on the `rowHidden` property.</span></span>
+      指定是否在属性上进行加载 `rowHidden` 。
 
-      <span data-ttu-id="d3532-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3532-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHidden
     fullName: rowHidden
     langs:
@@ -52,9 +52,9 @@ items:
           - boolean
   - uid: 'excel!Excel.RowPropertiesLoadOptions#rowIndex:member'
     summary: |-
-      <span data-ttu-id="d3532-107">指定是否在`rowIndex`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="d3532-107">Specifies whether to load on the `rowIndex` property.</span></span>
+      指定是否在属性上进行加载 `rowIndex` 。
 
-      <span data-ttu-id="d3532-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3532-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
     fullName: rowIndex
     langs:
