--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.settablerowproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.settablerowproperties.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.SettableRowProperties:interface'
     summary: |-
-      <span data-ttu-id="60b2a-101">表示 setRowProperties 的输入参数。</span><span class="sxs-lookup"><span data-stu-id="60b2a-101">Represents the input parameter of setRowProperties.</span></span>
+      表示 setRowProperties 的输入参数。
 
-      <span data-ttu-id="60b2a-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60b2a-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.SettableRowProperties
     fullName: Excel.SettableRowProperties
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.SettableRowProperties#rowHidden:member'
   - uid: 'excel!Excel.SettableRowProperties#format:member'
     summary: |-
-      <span data-ttu-id="60b2a-103">表示`format`属性。</span><span class="sxs-lookup"><span data-stu-id="60b2a-103">Represents the `format` property.</span></span>
+      表示`format`属性。
 
-      <span data-ttu-id="60b2a-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60b2a-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.SettableRowProperties#format~0:complex'
   - uid: 'excel!Excel.SettableRowProperties#rowHidden:member'
     summary: |-
-      <span data-ttu-id="60b2a-105">表示`rowHidden`属性。</span><span class="sxs-lookup"><span data-stu-id="60b2a-105">Represents the `rowHidden` property.</span></span>
+      表示`rowHidden`属性。
 
-      <span data-ttu-id="60b2a-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60b2a-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHidden
     fullName: rowHidden
     langs:
