--- a/docs/docs-ref-autogen/word_1_1/word/word.filecontentformat.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.filecontentformat.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.FileContentFormat:enum'
-    summary: '<span data-ttu-id="6710f-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6710f-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.FileContentFormat
     fullName: Word.FileContentFormat
     langs:
