--- a/docs/docs-ref-autogen/word/word/word.customxmlpartscopedcollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.customxmlpartscopedcollection.yml
@@ -150,7 +150,7 @@ items:
         type:
           - 'word!Word.CustomXmlPartScopedCollection#items~0:complex'
   - uid: 'word!Word.CustomXmlPartScopedCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -169,7 +169,7 @@ items:
           type:
             - 'word!Word.CustomXmlPartScopedCollection#load~0:complex'
   - uid: 'word!Word.CustomXmlPartScopedCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -188,7 +188,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.CustomXmlPartScopedCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
