--- a/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.pagebreakcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_11/excel/excel.interfaces.pagebreakcollectionloadoptions.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.PageBreakCollectionLoadOptions#columnIndex:member'
       - 'excel!Excel.Interfaces.PageBreakCollectionLoadOptions#rowIndex:member'
   - uid: 'excel!Excel.Interfaces.PageBreakCollectionLoadOptions#$all:member'
-    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
