--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.tasksuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.tasksuggestion.yml
@@ -4,11 +4,11 @@ items:
     summary: |-
       表示项目中标识的建议任务。 仅限阅读模式。
 
-      在电子邮件中建议的任务列表在对活动项调用`taskSuggestions` `getEntities` or `getEntitiesByType`方法时返回的[实体](xref:outlook!Office.Entities:interface)对象的属性中返回。
+      在电子邮件中建议的任务列表在对 `taskSuggestions` [Entities](xref:outlook!Office.Entities:interface) `getEntities` 活动项调用 or 方法时返回的实体对象的属性中返回 `getEntitiesByType` 。
     remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->**：`ReadItem`
+      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points)<!-- -->**：读取
+      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
 
       #### <a name="examples"></a>示例
 
