--- a/docs/docs-ref-autogen/word/word/word.customxmlpart.yml
+++ b/docs/docs-ref-autogen/word/word/word.customxmlpart.yml
@@ -222,7 +222,7 @@ items:
           type:
             - number
   - uid: 'word!Word.CustomXmlPart#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -241,7 +241,7 @@ items:
           type:
             - 'word!Word.Interfaces.CustomXmlPartLoadOptions:interface'
   - uid: 'word!Word.CustomXmlPart#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -260,7 +260,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.CustomXmlPart#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
