--- a/docs/docs-ref-autogen/word/word/word.customxmlpartcollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.customxmlpartcollection.yml
@@ -160,7 +160,7 @@ items:
         type:
           - 'word!Word.CustomXmlPartCollection#items~0:complex'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -179,7 +179,7 @@ items:
           type:
             - 'word!Word.CustomXmlPartCollection#load~0:complex'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -198,7 +198,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.CustomXmlPartCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
