--- a/docs/docs-ref-autogen/word/word/word.setting.yml
+++ b/docs/docs-ref-autogen/word/word/word.setting.yml
@@ -115,7 +115,7 @@ items:
         type:
           - string
   - uid: 'word!Word.Setting#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(options)
     fullName: load(options)
@@ -134,7 +134,7 @@ items:
           type:
             - 'word!Word.Interfaces.SettingLoadOptions:interface'
   - uid: 'word!Word.Setting#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
@@ -153,7 +153,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'word!Word.Setting#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
